--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
-1. type checker
+1. type checker DONE
 2. functions
 3. process
 4. try to get more accurate parsing error messages
-5. += -= etc.
-5.5. fix stream on one line and stream on the next failing as it thinks it should be parsing the latter as a streamget -- FIXED BY ADDING semicolons, maybe work on removing again.
+5. += -= etc. DONE
+5.5. fix stream on one line and stream on the next failing as it thinks it should be parsing the latter as a streamget -- FIXED BY ADDING semicolons, maybe work on removing again. UNFIXED (maybe, maybe it wasnt compiled and semicolons do work). 
+5.8 and/or DONE
 -- CONSIDER BEFORE DOING THIS
 6. better type error messages (line and col number for AlexPosn; show error line from source code)
