--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 1. type checker DONE
 2. functions
 3. process
+3.5 pipe err messages to stderr (tho i think it might be doing that already)
 4. try to get more accurate parsing error messages DONE
 5. += -= etc. DONE
 5.5. fix stream on one line and stream on the next failing as it thinks it should be parsing the latter as a streamget -- FIXED BY ADDING semicolons, maybe work on removing again. UNFIXED (maybe, maybe it wasnt compiled and semicolons do work). 
