--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,4 @@
 7. Syntax highlighting
 101. better type error messages (line and col number for AlexPosn; show error line from source code)
 1000. fix stream on one line and stream on the next failing as it thinks it should be parsing the latter as a streamget -- FIXED BY ADDING semicolons, maybe work on removing again. UNFIXED (maybe, maybe it wasnt compiled and semicolons do work).  DONE
+1001. don't need type for fn in vardec
